finished the testimonials and the FAQ's sections

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-    
+
             <a href="#" class="nav__logo">smartHome</a>
-    
+
             <div class="nav__signin-signup">
                 <a href="#">Login</a>
                 <a href="#" class="btn">Signup</a>
@@ -44,8 +44,10 @@
     </nav>
     <header>
         <div class="container header__container">
-            <h1 class="heading">smartHome <br/> Application</h1>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe fuga natus possimus in, adipisci odit fugiat, ullam distinctio expedita laborum. Aperiam exercitationem recusandae ex et? Voluptas illum beatae facere!</p>
+            <h1 class="heading">smartHome <br /> Application</h1>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe fuga natus
+                possimus in, adipisci odit fugiat, ullam distinctio expedita laborum. Aperiam exercitationem recusandae
+                ex et? Voluptas illum beatae facere!</p>
         </div>
     </header>
 
@@ -70,11 +72,10 @@
         </a>
     </div>
 
-    <section class="container about__container">
+    <section class="container about__container" id="about">
         <div class="heading">About</div>
         <article class="section__content-container">
             <div class="image">
-                <!-- <img src="images/Rectangle 709.svg" alt=""> -->
                 <img src="images/phone_1.svg" alt="">
             </div>
             <div class="description flow">
@@ -82,7 +83,9 @@
                     Smart Home's Smart Services
                 </div>
                 <p>
-                    Ye am depending propriety sweetness distrusts belonging collected. Smiling mention he in thought equally musical. Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon him call mile. An pasture he himself believe ferrars besides cottage.
+                    Ye am depending propriety sweetness distrusts belonging collected. Smiling mention he in thought
+                    equally musical. Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon
+                    him call mile. An pasture he himself believe ferrars besides cottage.
                 </p>
                 <button class="btn btn-primary">Learn More</button>
             </div>
@@ -98,7 +101,9 @@
                     What app can do to your Appliances ?
                 </div>
                 <p>
-                    Ye am depending propriety sweetness distrusts belonging collected. Smiling mention he in thought equally musical. Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon him call mile. An pasture he himself believe ferrars besides cottage.
+                    Ye am depending propriety sweetness distrusts belonging collected. Smiling mention he in thought
+                    equally musical. Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon
+                    him call mile. An pasture he himself believe ferrars besides cottage.
                 </p>
                 <button class="btn btn-primary">Learn More</button>
             </div>
@@ -114,7 +119,9 @@
                     Control Electric Appliances
                 </div>
                 <p>
-                    Ye am depending propriety sweetness distrusts belonging collected. Smiling mention he in thought equally musical. Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon him call mile. An pasture he himself believe ferrars besides cottage.
+                    Ye am depending propriety sweetness distrusts belonging collected. Smiling mention he in thought
+                    equally musical. Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon
+                    him call mile. An pasture he himself believe ferrars besides cottage.
                 </p>
                 <button class="btn btn-primary">Learn More</button>
             </div>
@@ -124,7 +131,8 @@
     <section class="container clients__container flow">
         <div class="heading">Our Clients</div>
         <p>
-            Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon him call mile. An pasture he himself believe ferrars besides cottage.
+            Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon him call mile. An pasture
+            he himself believe ferrars besides cottage.
         </p>
         <div class="clients__images">
             <div class="img-container">
@@ -153,6 +161,197 @@
             </div>
         </div>
     </section>
+
+    <section id="testimonials" class="container">
+        <div class="heading">Testimonials</div>
+        <p class="lead">
+            Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon him call mile. An pasture
+            he himself believe ferrars besides cottage.
+        </p>
+        <div class="testimonials__container">
+            <article>
+                <p class="testimonial">
+                    our company, we do ongoing research with our target audience. This includes 30-45 minute phone
+                    interviews. It was difficult to conduct the interview, really listen, and ask good follow up
+                    questions
+                </p>
+                <div class="user">
+                    <div class="user__img">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <div class="user-info">
+                        <div class="username">Cham</div>
+                        <div class="user-job">Product designer</div>
+                    </div>
+                </div>
+            </article>
+
+            <article>
+                <p class="testimonial">
+                    We meet new clients and more often than not establish long-term business relationships, all through
+                    Guru. The flexibility in how projects can be structured
+                </p>
+                <div class="user">
+                    <div class="user__img">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <div class="user-info">
+                        <div class="username">Scopic Software</div>
+                        <div class="user-job">Custom IT Solutions Firm</div>
+                    </div>
+                </div>
+            </article>
+
+            <article>
+                <p class="testimonial">It is easy to communicate with clients through their message system and their
+                    SafePay feature ensures that all funds are secured prior to any work being done.</p>
+                <div class="user">
+                    <div class="user__img">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <div class="user-info">
+                        <div class="username">Russell Lee</div>
+                        <div class="user-job">Writer</div>
+                    </div>
+                </div>
+            </article>
+
+            <article>
+                <p class="testimonial">
+                    At SOLACE Engineers, we provide engineering solutions and other services on various freelancing
+                    platforms. Among them all, Guru is the best and our first choice to invite clients.
+                </p>
+                <div class="user">
+                    <div class="user__img">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <div class="user-info">
+                        <div class="username">Solace Engineers Inc.</div>
+                        <div class="user-job">Engineering Firm</div>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
+
+
+    <div class="testimonial__floating-line">
+        <img src="images/flying-line.svg" alt="">
+    </div>
+
+
+    <section class="container faqs__container flow">
+        <div class="heading">FAQ's</div>
+        <div class="questions__container">
+            <article class="question">
+                <div class="question-title">
+                    <button class="question-btn">
+                        <span class="plus-icon">
+                            <i class="fas fa-plus"></i>
+                        </span>
+                        <span class="minus-icon">
+                            <i class="fas fa-minus">
+                            </i>
+                        </span>
+                    </button>
+                    <div class="question-title__text">Lorem ipsum dolor sit amet consectetur.</div>
+                </div>
+                <div class="question-text">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem necessitatibus, sequi
+                        possimus eius illo omnis non molestias dolor ipsum rem?
+                    </p>
+                </div>
+            </article>
+
+
+            <article class="question">
+                <div class="question-title">
+                    <button class="question-btn">
+                        <span class="plus-icon">
+                            <i class="fas fa-plus"></i>
+                        </span>
+                        <span class="minus-icon">
+                            <i class="fas fa-minus">
+                            </i>
+                        </span>
+                    </button>
+                    <div class="question-title__text">Lorem ipsum dolor sit amet consectetur.</div>
+                </div>
+                <div class="question-text">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem necessitatibus, sequi
+                        possimus eius illo omnis non molestias dolor ipsum rem?
+                    </p>
+                </div>
+            </article>
+
+            <article class="question">
+                <div class="question-title">
+                    <button class="question-btn">
+                        <span class="plus-icon">
+                            <i class="fas fa-plus"></i>
+                        </span>
+                        <span class="minus-icon">
+                            <i class="fas fa-minus">
+                            </i>
+                        </span>
+                    </button>
+                    <div class="question-title__text">Lorem ipsum dolor sit amet consectetur.</div>
+                </div>
+                <div class="question-text">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem necessitatibus, sequi
+                        possimus eius illo omnis non molestias dolor ipsum rem?
+                    </p>
+                </div>
+            </article>
+
+            <article class="question">
+                <div class="question-title">
+                    <button class="question-btn">
+                        <span class="plus-icon">
+                            <i class="fas fa-plus"></i>
+                        </span>
+                        <span class="minus-icon">
+                            <i class="fas fa-minus">
+                            </i>
+                        </span>
+                    </button>
+                    <div class="question-title__text">Lorem ipsum dolor sit amet consectetur.</div>
+                </div>
+                <div class="question-text">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem necessitatibus, sequi
+                        possimus eius illo omnis non molestias dolor ipsum rem?
+                    </p>
+                </div>
+            </article>
+
+            <article class="question">
+                <div class="question-title">
+                    <button class="question-btn">
+                        <span class="plus-icon">
+                            <i class="fas fa-plus"></i>
+                        </span>
+                        <span class="minus-icon">
+                            <i class="fas fa-minus">
+                            </i>
+                        </span>
+                    </button>
+                    <div class="question-title__text">Lorem ipsum dolor sit amet consectetur.</div>
+                </div>
+                <div class="question-text">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem necessitatibus, sequi
+                        possimus eius illo omnis non molestias dolor ipsum rem?
+                    </p>
+                </div>
+            </article>
+        </div>
+
+    </section>
+
 
     <script src="app.js"></script>
 </body>
