finished the testimonials and the FAQs sections

--- a/index.html
+++ b/index.html
@@ -349,9 +349,27 @@
                 </div>
             </article>
         </div>
-
     </section>
 
+    <section class="container download__container">
+        <div>
+            <div class="heading">Download <br/> App</div>
+            <p class="lead">
+                Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon him call mile. An pasture he himself believe ferrars besides cottage.
+            </p>
+            <div class="to-download">
+                <a href="https://www.apple.com/eg/app-store/" target="_blank">
+                    <img src="images/appStore_button.svg" alt="">
+                </a>
+                <a href="https://play.google.com/store/" target="_blank">
+                    <img src="images/googlePlay_button.svg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="download__container__image">
+            <img src="images/phone_1.svg" alt="">
+        </div>
+    </section>
 
     <script src="app.js"></script>
 </body>
