--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
 
         <article class="section__content-container">
             <div class="image reverse-order">
-                <!-- <img src="images/Rectangle 709.svg" alt=""> -->
                 <img src="images/phone_2.svg" alt="">
             </div>
             <div class="description flow">
@@ -370,6 +369,98 @@
             <img src="images/phone_1.svg" alt="">
         </div>
     </section>
+
+    <section class="subscribe">
+        <div class="container subscription__container">
+            <div class="info">
+                <div class="heading">
+                    Subscribe to get updated
+                </div>
+                <p>
+                    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque .
+                </p>
+            </div>
+            <button class="btn btn-primary">
+                <a href="">Get started</a>
+            </button>
+        </div>
+    </section>
+
+    <footer>
+        <section>
+            <div class="container footer__container">
+                <div class="footer__part-one">
+                    <form class="footer__part-one__form">
+                        <h4>smartHome</h4>
+                        <p>Automate your entire healthcare hiring, onboarding and compliance with a true technology platform.</p>
+                        <input type="email" name="email" placeholder="Email Address">
+                        <button type="submit">Register</button>
+                    </form>
+                    <div class="footer__part-one__categories">
+                        <div class="title">
+                            CATEGORIES
+                        </div>
+                        <ul class="list">
+                            <li><a href="">
+                                Product Management
+                            </a></li>
+                            <li><a href="">
+                                Design / Creatives
+                            </a></li>
+                            <li><a href="">
+                                Education & Training
+                            </a></li>
+                            <li><a href="">
+                                UI/UX Designers
+                            </a></li>
+                            <li><a href="">
+                                Development
+                            </a></li>
+                            <li><a href="">
+                                Customer Support
+                            </a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__part-two">
+                    <div class="footer__part-two__about">
+                        <div class="title">ABOUT</div>
+                        <ul class="list">
+                            <li><a href="">
+                                About Us
+                            </a></li>
+                            <li><a href="">
+                                Partnerships
+                            </a></li>
+                            <li><a href="">
+                                Finance Experts
+                            </a></li>
+                            <li><a href="">
+                                Project Management
+                            </a></li>
+                            <li><a href="">
+                                Product Manager
+                            </a></li>
+                            <li><a href="">
+                                The Team
+                            </a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__part-two__follow-us">
+                        <div class="title">
+                            Follow Us
+                        </div>
+                        <ul class="list">
+                            <li><a href="">Facebook</a></li>
+                            <li><a href="">Twitter</a></li>
+                            <li><a href="">Instagram</a></li>
+                            <li><a href="">Linkedin</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 
     <script src="app.js"></script>
 </body>
