finished the footer section and styling the fixed nav

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="nav">
         <div class="container nav__container">
             <ul class="links">
                 <li><a href="#">Home</a></li>
@@ -70,7 +70,23 @@
         <a href="https://play.google.com/store/" target="_blank">
             <img src="images/googlePlay_button.svg" alt="">
         </a>
+    
     </div>
+    <ul class="socials">
+        <li><a href="">
+            <i class="fa-brands fa-facebook-f"></i>
+        </a></li>
+        <li><a href="">
+            <i class="fa-brands fa-instagram"></i>
+        </a></li>
+        <li><a href="">
+            <i class="fa-brands fa-twitter"></i>
+        </a>
+        </li>
+        <li><a href="">
+            <i class="fa-brands fa-linkedin-in"></i>
+        </a></li>
+    </ul>
 
     <section class="container about__container" id="about">
         <div class="heading">About</div>
@@ -390,7 +406,7 @@
         <section>
             <div class="container footer__container">
                 <div class="footer__part-one">
-                    <form class="footer__part-one__form">
+                    <form class="footer__part-one__form flow">
                         <h4>smartHome</h4>
                         <p>Automate your entire healthcare hiring, onboarding and compliance with a true technology platform.</p>
                         <input type="email" name="email" placeholder="Email Address">
@@ -461,6 +477,10 @@
             </div>
         </section>
     </footer>
+
+        <div class="container copyright__container">
+            copyright &copy; <span class="date"></span> all rights reserved smartHome.
+        </div>
 
     <script src="app.js"></script>
 </body>
