finished the responsive design for tablets

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="nav">
         <div class="container nav__container">
-            <ul class="links">
+            <ul class="links | hide">
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
@@ -32,11 +32,11 @@
                 <a href="#" class="btn">Signup</a>
             </div>
 
-            <div>
-                <button>
+            <div class="nav__buttons">
+                <button class="menu-bars | active">
                     <i class="fas fa-bars"></i>
                 </button>
-                <button>
+                <button class="close">
                     <i class="fas fa-close"></i>
                 </button>
             </div>
