--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <nav class="nav">
         <div class="container nav__container">
             <ul class="links | hide">
-                <li><a href="#">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
 
             <a href="#" class="nav__logo">smartHome</a>
@@ -42,7 +42,7 @@
             </div>
         </div>
     </nav>
-    <header>
+    <header id='home'>
         <div class="container header__container">
             <h1 class="heading">smartHome <br /> Application</h1>
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe fuga natus
