modified the files to remove images causing document overflow

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <img src="images/Hero Image.svg" alt="">
     </div>
 
-    <div class="header__floating-line">
+    <!-- <div class="header__floating-line">
         <img src="images/flying-line.svg" alt="">
-    </div>
+    </div> -->
     <!-- The image should be placed outside the header to acheieve the desired design 
     -->
     <a href="#testimonials" class="scrolldown-arrow">
@@ -250,9 +250,9 @@
     </section>
 
 
-    <div class="testimonial__floating-line">
+    <!-- <div class="testimonial__floating-line">
         <img src="images/flying-line.svg" alt="">
-    </div>
+    </div> -->
 
 
     <section class="container faqs__container flow">
